# scmodels

./: .gitignore  .travis.yml  CITATION.cff  LICENSE.md  README.ipynb  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql.yml  ipynb_to_readme.yml  pytest_linux.yml  pytest_mac.yml  pytest_win.yml  python-package.yml
docs/: README.ipynb  notebook_conversion.py
scm/: __init__.py  parser.py  scm.py
scm/functionals/: __init__.py  affine.py  elemental.py  functionals.py  polynomial.py  specials.py  utils.py
scm/noise/: __init__.py  generator.py  noise.py  noise_specials.py
scm/random/: __init__.py  random_graph.py
scmodels/: __init__.py  parser.py  scm.py
src/scmodels/: parser.py  scm.py  version.py
test/: build_scm.py  builld_scm_funcs.py  test_binary_operations.py  test_elementals.py  test_noise.py  test_scm.py
