[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = 'scmodels'
version = '0.2.1.dev'
authors = [
    'Michael Aichmueller <m.aichmueller@gmail.com>'
]
license = 'MIT license'
description = 'Structural Causal Models'
keywords = ['bayesian',
    'graphs',
    'scm',
    'sem',
    'fcm',
    'causal',
    'graphical',
    'models',
    'causality'
]
homepage = 'https://github.com/maichmueller/scmodels'
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Topic :: Scientific/Engineering :: Mathematics'
]
packages = [
    { include = "scmodels", from = "src" },
]


[tool.poetry.dependencies]
# Compatible Python versions
python = ">=3.7"
numpy = [
    { version = ">=1.22", python = ">=3.10" },
    { version = ">=1.19", python = "<=3.9" }
]
scipy = [
    { version = ">=1.7.0" , python = ">=3.10"},
    { version = ">=1.3", python = "<=3.9" }
]
pandas = { version = ">=1.0" }
matplotlib = { version = ">=3.0" }
sympy = { version = ">=1.9.0" }
networkx = { version = ">=2.0" }

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.group.plot]
optional = true

[tool.poetry.group.plot.dependencies]
pygraphviz = "*"